--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="vendor/renderjson/renderjson.js"></script>
     <script>var site = {{ site | jsonify }};</script>
     <script>
-      document.getElementById("output").appendChild(renderjson.set_show_to_level(2)(site));
+      document.getElementById("output").appendChild(renderjson.set_show_to_level(2)(site.github));
     </script>
   </body>
 </html>
