convert to sass

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,16 +1,33 @@
 ---
 ---
 
-.renderjson a              { text-decoration: none; }
-.renderjson .disclosure    { color: crimson;
-                             font-size: 150%; }
-.renderjson .syntax        { color: grey; }
-.renderjson .string        { color: red; }
-.renderjson .number        { color: cyan; }
-.renderjson .boolean       { color: plum; }
-.renderjson .key           { color: lightblue; }
-.renderjson .keyword       { color: lightgoldenrodyellow; }
-.renderjson .object.syntax { color: lightseagreen; }
-.renderjson .array.syntax  { color: lightsalmon; }
-pre { background: #000; padding: 15px; width: 75%; }
-body { padding: 25px; }
+.renderjson
+  a
+    text-decoration: none
+  .disclosure
+    color: crimson
+    font-size: 150%
+  .syntax
+    color: grey
+  .string
+    color: red
+  .number
+    color: cyan
+  .boolean
+    color: plum
+  .key
+    color: lightblue
+  .keyword
+    color: lightgoldenrodyellow
+  .object.syntax
+    color: lightseagreen
+  .array.syntax
+    color: lightsalmon
+
+pre
+  background: #000
+  padding: 15px
+  width: 75%
+
+body
+  padding: 25px
