Add a class to ensure our jekyll-mentions thing works

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="assets/style.css" />
   </head>
-  <body>
+  <body class="a-thing">
     {{ content }}
     <script type="text/javascript" src="vendor/renderjson/renderjson.js"></script>
     <script>var site = {{ site | jsonify }};</script>
