--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
 
       function reqListener(e) {
         site = JSON.parse(this.responseText);
+        document.getElementById("features").appendChild(
+          renderjson.set_show_to_level(2)(site.github_features)
+        );
         document.getElementById("output").appendChild(
           renderjson.set_show_to_level(2)(site.github)
         );
