--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,6 +1,8 @@
 ---
 ---
 
+@import "minima"
+
 .renderjson
   a
     text-decoration: none
@@ -27,7 +29,4 @@
 pre
   background: #000
   padding: 15px
-  width: 75%
-
-body
-  padding: 25px
+  width: 100%
